hphp/hack/test/pocket_universes/naming/trait_no_req.bad.php
<?hh

trait myTrait0 {
    enum E {
        :@S(type T = string, val = "foo");
    }
}
